@@ -245,6 +245,13 @@ module PageObject
         end
 
         #
+        # platform method to retrieve an array of textarea elements
+        #
+        def text_areas_for(identifier)
+          find_watir_elements("textareas(identifier)", Elements::TextArea, identifier)
+        end
+
+        #
         # platform method to get the currently selected value from a select list
         # See PageObject::Accessors#select_list
         #
