@@ -3,6 +3,7 @@
   * Added #button_elements to ElementLocators
   * Added #text_field_elements to ElementLocators
   * Added #hidden_field_elements to ElementLocators
+  * Added #text_area_elements to ElementLocators
   * Added #navigate_to to PageFactory to navigate to a page through previous pages
   * Added #continue_navigation_to to PageFactory which begins at @current_page
   * Added routes to PageFactory to collect routes through the site
